# Ithaca

./: .gitignore  Dockerfile  README.md  action.yml  conf.yaml  entrypoint.sh  pyproject.toml
shhhhh/: htmlize_conf.py  policies.py  policy1.py  scan.py
